Fixes a bug when notebook tabs are overflowed.

--- a/usr/share/css/themes/elementary/tabs.css
+++ b/usr/share/css/themes/elementary/tabs.css
@@ -55,6 +55,7 @@
 	position: relative;
 	white-space: nowrap;
 	overflow: hidden;
+	height: 26px;
 	background-color: #c0c0c0;
 	background-image: linear-gradient(#aaaaaa 0%, #bababa 20%, #c7c7c7 100%);
 	box-shadow:  inset 0 -2px 2px -2px black;
@@ -69,6 +70,8 @@
 	margin-right: 1px;
 	width: 170px;
 	text-align: center;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .webos-notebook > ul.tabs > .tab-btn:not(.active) {
 	background-image: linear-gradient(transparent, #808080), linear-gradient(transparent, #808080);
@@ -97,10 +100,12 @@
 	float: left;
 	font-weight: bold;
 	color: #808080;
+	margin-right: 5px;
 }
 .webos-notebook > ul.tabs > .tab-btn-newtab {
+	float: left;
 	color: #808080;
-	margin: 0 10px 0 5px;
+	margin: 2px 10px 2px 5px;
 	font-weight: bold;
 }
 .webos-notebook > ul.tabs > .tab-btn .tab-btn-close:hover,
